# newsletter

./: Cargo.toml  Dockerfile  spec.yaml
configuration/: base.yaml
migrations/: 20241107225358_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  main.rs  startup.rs  telemetry.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
